--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
   },
   "devDependencies": {
     "@types/chai": "^3.0.0",
+    "@types/js-yaml": "^3.9.0",
+    "@types/lodash": "^4.14.72",
     "@types/mocha": "^2.0.0",
-    "@types/node": "^7.0.0",
+    "@types/node": "^6.0.0",
+    "@types/stack-trace": "^0.0.28",
+    "@types/shelljs": "^0.7.1",
     "chai": "^3.0.0",
     "coveralls": "^2.0.0",
     "firebase-admin": "^5.0.1",
+    "lodash": "^4.17.4",
     "mocha": "^3.0.0",
     "nyc": "^10.0.0",
     "rimraf": "^2.0.0",
