--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "declaration": true,
     "module": "commonjs",
+    "target": "ES6",
     "moduleResolution": "node",
+    "sourceMap": true,
     "noImplicitAny": true,
     "outDir": "./lib",
-    "preserveConstEnums": true,
     "removeComments": true,
     "typeRoots": [
       "./node_modules/@types"
