--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "typed-conversions",
-  "version": "0.7.4",
+  "version": "0.8.0",
   "description": "typed-conversions",
   "license": "MIT",
   "repository": "https://github.com/forest-fire/typed-conversions",
   "author": "Ken Snyder <ken@ken.net>",
-  "keywords": ["firebase", "utility", "typescript"],
-  "files": ["lib", "dist"],
+  "keywords": [
+    "firebase",
+    "utility",
+    "typescript"
+  ],
+  "files": [
+    "lib",
+    "dist"
+  ],
   "main": "lib/index.js",
   "browser": "dist/typed-conversions.min.js",
   "module": "dist/typed-conversions.es.js",
@@ -14,12 +21,9 @@
   "scripts": {
     "clean": "rimraf lib",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
-    "build":
-      "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty && bili lib/index.js --format umd-min,es",
-    "test":
-      "npm run build && mocha --compilers ts:ts-node/register --recursive 'test/**/*-spec.ts'",
-    "coverage":
-      "nyc --include='src/**/*.ts' --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
+    "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty && bili lib/index.js --format umd-min,es",
+    "test": "npm run build && mocha --compilers ts:ts-node/register --recursive 'test/**/*-spec.ts'",
+    "coverage": "nyc --include='src/**/*.ts' --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch"
   },
@@ -50,10 +54,18 @@
     "node": ">=4.0.0"
   },
   "nyc": {
-    "include": ["src/**/*.ts"],
-    "exclude": ["lib"],
-    "extension": [".ts"],
-    "require": ["ts-node/register"],
+    "include": [
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "lib"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
     "reporter": [],
     "all": true
   }
