--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
-    "common-types": "^1.1.0"
+    "common-types": "^1.1.0",
+    "lodash.get": "^4.4.2"
   },
   "devDependencies": {
     "@types/chai": "^3.0.0",
     "@types/js-yaml": "^3.9.0",
     "@types/lodash": "^4.14.72",
+    "@types/lodash.get": "^4.4.3",
     "@types/mocha": "^2.0.0",
     "@types/node": "^6.0.0",
     "@types/shelljs": "^0.7.1",
