--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-conversions",
-  "version": "0.8.13",
+  "version": "0.9.0",
   "description": "typed-conversions",
   "license": "MIT",
   "repository": "https://github.com/forest-fire/typed-conversions",
@@ -14,14 +14,13 @@
     "lib",
     "dist"
   ],
-  "main": "lib/index.js",
-  "browser": "dist/typed-conversions.min.js",
-  "module": "dist/typed-conversions.es.js",
-  "typings": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "clean": "rimraf lib",
+    "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
-    "build": "npm run clean && npm run lint && echo Using TypeScript && tsc --version && tsc --pretty && bili lib/index.js --format umd-min,es",
+    "build": "npm run clean && bili src/index.ts --format cjs,es",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive 'test/**/*-spec.ts'",
     "coverage": "nyc --include='src/**/*.ts' --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
     "watch": "npm run build -- --watch",
@@ -29,28 +28,28 @@
   },
   "dependencies": {
     "common-types": "^1.7.36",
-    "lodash.get": "^4.4.2"
+    "lodash-es": "^4.17.11"
   },
   "devDependencies": {
-    "@types/chai": "^3.0.0",
-    "@types/js-yaml": "^3.9.0",
-    "@types/lodash": "^4.14.72",
-    "@types/lodash.get": "^4.4.3",
+    "@types/chai": "^4.1.7",
+    "rollup-plugin-typescript2": "^0.20.0",
+    "@types/js-yaml": "^3.12.0",
+    "@types/lodash-es": "^4.17.3",
     "@types/mocha": "^2.0.0",
     "@types/node": "^6.0.0",
-    "@types/shelljs": "^0.7.1",
-    "@types/stack-trace": "^0.0.28",
-    "bili": "^3.1.2",
-    "chai": "^3.0.0",
+    "@types/shelljs": "^0.8.3",
+    "@types/stack-trace": "^0.0.29",
+    "bili": "^4.4.0",
+    "chai": "^4.2.0",
     "coveralls": "^2.0.0",
-    "firebase-admin": "5.1.0",
-    "lodash": "^4.17.4",
-    "mocha": "^3.0.0",
+    "firebase-admin": "7.0.0",
+    "lodash": "^4.17.11",
+    "mocha": "^6.0.2",
     "nyc": "^10.0.0",
     "rimraf": "^2.0.0",
-    "ts-node": "^3.0.0",
-    "tslint": "^5.5.0",
-    "typescript": "^2.0.0"
+    "ts-node": "^8.0.3",
+    "tslint": "^5.13.0",
+    "typescript": "^3.3.3"
   },
   "engines": {
     "node": ">=4.0.0"
