--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-conversions",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "typed-conversions",
   "license": "MIT",
   "repository": "https://github.com/forest-fire/typed-conversions",
@@ -32,7 +32,6 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "rollup-plugin-typescript2": "^0.20.0",
     "@types/js-yaml": "^3.12.0",
     "@types/lodash-es": "^4.17.3",
     "@types/mocha": "^2.0.0",
@@ -45,10 +44,12 @@
     "firebase-admin": "7.0.0",
     "lodash": "^4.17.11",
     "mocha": "^6.0.2",
-    "nyc": "^10.0.0",
-    "rimraf": "^2.0.0",
+    "nyc": "^13.3.0",
+    "rimraf": "^2.6.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-typescript2": "^0.20.0",
     "ts-node": "^8.0.3",
-    "tslint": "^5.13.0",
+    "tslint": "^5.13.1",
     "typescript": "^3.3.3"
   },
   "engines": {
