--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   ],
   "main": "dist/index.js",
   "module": "dist/index.mjs",
+  "browserslist": [
+    "node 8"
+  ],
   "typings": "dist/index.d.ts",
   "scripts": {
     "clean": "rimraf dist",
@@ -35,7 +38,7 @@
     "@types/js-yaml": "^3.12.0",
     "@types/lodash-es": "^4.17.3",
     "@types/mocha": "^2.0.0",
-    "@types/node": "^6.0.0",
+    "@types/node": "^8.10.0",
     "@types/shelljs": "^0.8.3",
     "@types/stack-trace": "^0.0.29",
     "bili": "^4.4.0",
@@ -53,7 +56,7 @@
     "typescript": "^3.3.3"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=8.0.0"
   },
   "nyc": {
     "include": [
