--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-conversions",
-  "version": "0.9.5",
+  "version": "0.9.6",
   "description": "typed-conversions",
   "license": "MIT",
   "repository": "https://github.com/forest-fire/typed-conversions",
@@ -23,7 +23,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
-    "build": "npm run clean && bili src/index.ts --format es",
+    "build": "npm run clean && bili src/index.ts --format es,cjs && tsc src/index.ts --declaration -outDir dist --noEmit",
     "test": "npm run build && mocha --compilers ts:ts-node/register --recursive 'test/**/*-spec.ts'",
     "coverage": "nyc --include='src/**/*.ts' --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
     "watch": "npm run build -- --watch",
@@ -31,13 +31,13 @@
   },
   "dependencies": {
     "common-types": "^1.7.36",
-    "lodash-es": "^4.17.11"
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/js-yaml": "^3.12.0",
-    "@types/lodash-es": "^4.17.3",
-    "@types/mocha": "^2.0.0",
+    "@types/lodash": "^4.14.123",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^8.10.0",
     "@types/shelljs": "^0.8.3",
     "@types/stack-trace": "^0.0.29",
@@ -45,7 +45,6 @@
     "chai": "^4.2.0",
     "coveralls": "^2.0.0",
     "firebase-admin": "7.0.0",
-    "lodash": "^4.17.11",
     "mocha": "^6.0.2",
     "nyc": "^13.3.0",
     "rimraf": "^2.6.3",
