--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-conversions",
-  "version": "0.9.6",
+  "version": "0.9.7",
   "description": "typed-conversions",
   "license": "MIT",
   "repository": "https://github.com/forest-fire/typed-conversions",
@@ -11,32 +11,32 @@
     "typescript"
   ],
   "files": [
-    "lib",
     "dist"
   ],
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esnext/index.js",
   "browserslist": [
     "node 8"
   ],
-  "typings": "dist/index.d.ts",
+  "typings": "dist/esnext/index.d.ts",
   "scripts": {
     "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
-    "build": "npm run clean && bili src/index.ts --format es,cjs && tsc src/index.ts --declaration -outDir dist --noEmit",
-    "test": "npm run build && mocha --compilers ts:ts-node/register --recursive 'test/**/*-spec.ts'",
+    "build:rollup": "npm run clean && bili src/index.ts --format es,cjs && tsc src/index.ts --declaration -outDir dist --noEmit",
+    "build": "npm run clean && tsc -p tsconfig.esnext.json && tsc -p tsconfig.json",
+    "test": "mocha --require ts-node/register --exit 'test/**/*-spec.ts'",
     "coverage": "nyc --include='src/**/*.ts' --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
-    "common-types": "^1.7.36",
-    "lodash": "^4.17.11"
+    "common-types": "^1.9.7",
+    "lodash-es": "^4.17.11"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/js-yaml": "^3.12.0",
-    "@types/lodash": "^4.14.123",
+    "@types/lodash-es": "^4.17.3",
     "@types/mocha": "^5.2.6",
     "@types/node": "^8.10.0",
     "@types/shelljs": "^0.8.3",
