switched to get-value (away from lodash)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
+  "esModuleInterop": true,
+
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*-spec.ts"]
 }
