--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-conversions",
-  "version": "0.9.7",
+  "version": "0.10.0",
   "description": "typed-conversions",
   "license": "MIT",
   "repository": "https://github.com/forest-fire/typed-conversions",
@@ -31,12 +31,13 @@
   },
   "dependencies": {
     "common-types": "^1.9.7",
-    "lodash-es": "^4.17.11"
+    "get-value": "^3.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/get-value": "^3.0.0",
     "@types/js-yaml": "^3.12.0",
-    "@types/lodash-es": "^4.17.3",
+    "@types/lodash": "^4.14.123",
     "@types/mocha": "^5.2.6",
     "@types/node": "^8.10.0",
     "@types/shelljs": "^0.8.3",
@@ -45,6 +46,7 @@
     "chai": "^4.2.0",
     "coveralls": "^2.0.0",
     "firebase-admin": "7.0.0",
+    "lodash": "^4.17.11",
     "mocha": "^6.0.2",
     "nyc": "^13.3.0",
     "rimraf": "^2.6.3",
