--- a/tsconfig.esnext.json
+++ b/tsconfig.esnext.json
@@ -14,6 +14,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
+  "esModuleInterop": true,
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*-spec.ts"]
 }
