--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "allowSyntheticDefaultImports": true
   },
   "esModuleInterop": true,
+  "allowSyntheticDefaultImports": true,
 
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*-spec.ts"]
