--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-conversions",
-  "version": "0.10.4",
+  "version": "0.10.5",
   "description": "typed-conversions",
   "license": "MIT",
   "repository": "https://github.com/forest-fire/typed-conversions",
@@ -16,7 +16,8 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esnext/index.js",
   "browserslist": [
-    "node 8"
+    "node 10",
+    "node 12"
   ],
   "typings": "dist/esnext/index.d.ts",
   "scripts": {
@@ -30,11 +31,12 @@
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
-    "common-types": "^1.14.3",
-    "lodash.get": "^4.4.2"
+    "common-types": "^1.15.6",
+    "get-value": "^3.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.9",
+    "@types/get-value": "^3.0.1",
     "@types/js-yaml": "^3.12.0",
     "@types/lodash": "^4.14.123",
     "@types/lodash.get": "^4.4.6",
@@ -53,7 +55,7 @@
     "typescript": "^3.7.5"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "nyc": {
     "include": [
