switched to lodash-es

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,7 @@
     "removeComments": false,
     "typeRoots": ["./node_modules/@types", "manual_typings"],
     "baseUrl": ".",
-    "paths": { "lodash/*": ["node_modules/@types/lodash-es/*"] },
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "paths": { "lodash/*": ["node_modules/@types/lodash-es/*"] }
   },
   "esModuleInterop": true,
   "allowSyntheticDefaultImports": true,
