--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-conversions",
-  "version": "0.10.5",
+  "version": "0.11.0",
   "description": "typed-conversions",
   "license": "MIT",
   "repository": "https://github.com/forest-fire/typed-conversions",
@@ -32,14 +32,15 @@
   },
   "dependencies": {
     "common-types": "^1.15.6",
-    "get-value": "^3.0.1"
+    "get-value": "^3.0.1",
+    "lodash-es": "^4.17.15"
   },
   "devDependencies": {
     "@types/chai": "^4.2.9",
     "@types/get-value": "^3.0.1",
+    "@types/jest": "^26.0.0",
     "@types/js-yaml": "^3.12.0",
-    "@types/lodash": "^4.14.123",
-    "@types/lodash.get": "^4.4.6",
+    "@types/lodash-es": "^4.17.3",
     "@types/mocha": "^5.2.6",
     "@types/node": "^8.10.0",
     "@types/shelljs": "^0.8.3",
@@ -47,9 +48,12 @@
     "bili": "^4.8.1",
     "chai": "^4.2.0",
     "firebase-admin": "8.12.1",
-    "lodash": "^4.17.15",
+    "jest": "^26.0.1",
+    "jest-extended": "^0.11.5",
     "mocha": "^7.0.1",
     "rimraf": "^3.0.2",
+    "ts-babel": "^6.1.7",
+    "ts-jest": "^26.1.1",
     "ts-node": "^8.6.2",
     "tslint": "^5.20.1",
     "typescript": "^3.7.5"
