--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "run-s clean build:cjs build:es",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:es": "tsc -p tsconfig.es.json",
-    "test": "mocha --require ts-node/register --exit 'test/**/*-spec.ts'",
+    "test": "jest",
     "coverage": "nyc --include='src/**/*.ts' --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch"
@@ -42,12 +42,13 @@
     "@types/node": "^8.10.0",
     "@types/shelljs": "^0.8.3",
     "@types/stack-trace": "^0.0.29",
+    "babel-jest": "^26.1.0",
     "firebase-admin": "8.12.1",
     "jest": "^26.0.1",
     "jest-extended": "^0.11.5",
+    "lodash": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-babel": "^6.1.7",
     "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
     "tslint": "^5.20.1",
