--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "scripts": {
     "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
-    "build:rollup": "npm run clean && bili src/index.ts --format es,cjs && tsc src/index.ts --declaration -outDir dist --noEmit",
-    "build": "run-s clean build:cjs build:es",
+    "build": "run-s clean build:rollup",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:es": "tsc -p tsconfig.es.json",
+    "build:rollup": "rollup -c",
     "test": "jest",
     "coverage": "nyc --include='src/**/*.ts' --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
     "watch": "npm run build -- --watch",
@@ -36,6 +36,7 @@
     "lodash-es": "^4.17.15"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^5.0.0",
     "@types/jest": "^26.0.0",
     "@types/js-yaml": "^3.12.0",
     "@types/lodash-es": "^4.17.3",
@@ -49,6 +50,8 @@
     "lodash": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "rollup": "^2.18.0",
+    "rollup-plugin-typescript2": "^0.27.1",
     "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
     "tslint": "^5.20.1",
