--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,26 +1,61 @@
 {
-  "version": "0.1.0",
+  "version": "2.0.0",
   "command": "npm",
-  "isShellCommand": true,
-  "args": ["run"],
-  "showOutput": "always",
+  "args": [
+    "run"
+  ],
   "tasks": [
     {
-      "taskName": "build",
-      "isBuildCommand": true
+      "label": "build",
+      "type": "shell",
+      "command": "npm",
+      "args": [
+        "run",
+        "build"
+      ],
+      "problemMatcher": [],
+      "group": "build"
     },
     {
-      "taskName": "clean"
+      "label": "clean",
+      "type": "shell",
+      "command": "npm",
+      "args": [
+        "run",
+        "clean"
+      ],
+      "problemMatcher": []
     },
     {
-      "taskName": "lint"
+      "label": "lint",
+      "type": "shell",
+      "command": "npm",
+      "args": [
+        "run",
+        "lint"
+      ],
+      "problemMatcher": []
     },
     {
-      "taskName": "coverage"
+      "label": "coverage",
+      "type": "shell",
+      "command": "npm",
+      "args": [
+        "run",
+        "coverage"
+      ],
+      "problemMatcher": []
     },
     {
-      "taskName": "test",
-      "isTestCommand": true
+      "label": "test",
+      "type": "shell",
+      "command": "npm",
+      "args": [
+        "run",
+        "test"
+      ],
+      "problemMatcher": [],
+      "group": "test"
     }
   ]
 }
