--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-conversions",
-  "version": "0.11.1",
+  "version": "0.12.0",
   "description": "typed-conversions",
   "license": "MIT",
   "repository": "https://github.com/forest-fire/typed-conversions",
@@ -23,9 +23,9 @@
     "clean": "rimraf dist",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "run-s clean build:rollup",
+    "build:rollup": "rollup -c",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:es": "tsc -p tsconfig.es.json",
-    "build:rollup": "rollup -c",
     "test": "jest",
     "coverage": "nyc --include='src/**/*.ts' --reporter=text --reporter=html --reporter=lcov mocha --compilers ts:ts-node/register --recursive 'test/**/*.test.ts'",
     "watch": "npm run build -- --watch",
@@ -33,30 +33,29 @@
   },
   "dependencies": {
     "common-types": "^1.15.6",
-    "lodash-es": "^4.17.15"
+    "native-dash": "^1.16.2"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^8.1.0",
-    "@rollup/plugin-typescript": "^5.0.0",
-    "@types/jest": "^26.0.0",
-    "@types/js-yaml": "^3.12.0",
-    "@types/lodash-es": "^4.17.3",
-    "@types/node": "^8.10.0",
+    "@rollup/plugin-node-resolve": "^13.0.2",
+    "@rollup/plugin-typescript": "^8.2.3",
+    "@types/jest": "^26.0.24",
+    "@types/js-yaml": "^4.0.2",
+    "@types/node": "12",
     "@types/shelljs": "^0.8.3",
     "@types/stack-trace": "^0.0.29",
-    "babel-jest": "^26.1.0",
-    "firebase-admin": "8.12.1",
-    "jest": "^26.0.1",
+    "babel-jest": "27",
+    "firebase-admin": "9.11.0",
+    "jest": "27",
     "jest-extended": "^0.11.5",
     "lodash": "^4.17.15",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.18.0",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "ts-jest": "^26.1.1",
-    "ts-node": "^8.10.2",
-    "tslint": "^5.20.1",
-    "typescript": "^3.9.5"
+    "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "27",
+    "ts-node": "^10.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.5"
   },
   "engines": {
     "node": ">=10.0.0"
